# hackathon-SWMxGemini

./: .gitignore  README.md  ingestor.py  models.py  presentation.pptx  pyproject.toml  vap.py
frontend/: package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/components/: NarrationLog.jsx  UploadZone.jsx  VideoPlayer.jsx
frontend/src/hooks/: useProcessing.js
merge/: TASK.md
src/: pipeline.py  server.py  synchronizer.py
src/ingestor/: __init__.py  ingestor.py  models.py  test_ingestor.py  test_mask_and_save.py  vap.py
src/narrator/: TASK.md  __init__.py  narrator.py  smoke_test.py  test_narrator.py
tests/: test_pipeline_modes.py  test_synchronizer.py
